--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 	<div class="winsAndLosses">
 		<h2>Wins:
 			<span id= "numberWins"></span>
-			</br>
+      </br>
+    </br>
+    
 			Losses: 
 			<span id= "numberLosses"></span>
 		</h2>
@@ -50,7 +52,7 @@
 		<img src="assets/images/yellow.png" class=gemImage id= "four" alt="Yellow Gem">
 	</div>
 	<div class="userTotal">
-		<h2>Your total score is:
+		<h2><strong>Score:</strong> 
 			<span id="finalTotal"></span>
 		</h2>
 	</div>
