--- a/index.html
+++ b/index.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
-	<title>Crystal Collector</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
-<body>
-	<div class="header">
-		<h1 style="color: aliceblue;">Crystals Collector!</h1>
-	</div>
-	<div class="instructions">
-		<h3>Here's how you play the game</h3>
-		</br>
-		<ul>
-			<li>You will be given a random number at the start of the game.<span>"Number To Get"</span></li>
-			<li>There are four crystals below.</li>
-			<ul>
-				<li id="blue">Blue</li>
-				<li id="green">Green</li>
-				<li id="red">Red</li>
-				<li id="yellow">Yellow</li>
-			</ul>
-			<li>By clicking on a crystal, you will add a specific amount of points to your total score.</li>
-			<li>You win the game by matching your total score to the random number.</li>
-			<li>You lose the game if your total score goes above the random number.</li>
-			<li>The value of each crystal is hidden from you until you click on it.</li>
-			<li>Each time when the game starts, the game will change the values of each crystal.</li>
-		</ul>
-	</div>
-	<div class="numberToMatch">
-		<h2>Number To Get:
-			<span id= "randomNumber"></span>
-		</h2>
-	</div>
-	<div class="winsAndLosses">
-		<h2>Wins:
-			<span id= "numberWins"></span>
-      </br>
-    </br>
-    
-			Losses: 
-			<span id= "numberLosses"></span>
-		</h2>
-	</div>
-	<div class="gems">
-		<img src="assets/images/blue.png" class=gemImage id="one" alt="Blue Gem">
-		<img src="assets/images/green.png" class=gemImage id="two" alt="Green Gem">
-		<img src="assets/images/red.png" class=gemImage id= "three" alt="Red Gem">
-		<img src="assets/images/yellow.png" class=gemImage id= "four" alt="Yellow Gem">
-	</div>
-	<div class="userTotal">
-		<h2><strong>Score:</strong> 
-			<span id="finalTotal"></span>
-		</h2>
-	</div>
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+	<title>Crystals Collector Game</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+</head>
+
+<body>
+
+	<div class="header text-center">
+		<h1>CRYSTALS COLLECTOR</h1>
+		<div class="row">
+			<div class="col-lg-12 directions">
+				<p>Click either gem until you get match "magic" number.</p>
+			</div>
+		</div>
+		<h3>MAGIC NUMBER:</h3>
+		<h3 id="magicNumber"></h3>
+	</div>
+	
+	<div class="container">
+		
+		<div class="row">
+			<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
+				<img class="crystalimg img-responsive" id="crystal1" src="assets/images/crystal1.png" alt="Crystal 1"/>
+			</div>
+			<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
+				<img class="crystalimg img-responsive" id="crystal2" src="assets/images/crystal2.png" alt="Crystal 2"/>
+			</div>
+			<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
+				<img class="crystalimg img-responsive" id="crystal3" src="assets/images/crystal3.png" alt="Crystal 3"/>
+			</div>
+			<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
+				<img class="crystalimg img-responsive" id="crystal4" src="assets/images/crystal4.png" alt="Crystal 4"/>
+			</div>
+		</div>
+
+	
+
+		<div class="row text-center">
+			<div class="col-lg-4 total">
+				<h3>TOTAL SCORE:</h3>
+				<h3 id="totalScore"></h3>
+			</div>
+			<div class="col-lg-4 button">
+				<h3 id="winOrLose"></h3>
+				<button type="button" class="btn btn-light btn-lg">PLAY AGAIN</button>
+			</div>
+			<div class="col-lg-4 scores">
+				<p class="score">WINS: <span id="wins"></span></p> 
+				<p class="score">LOSSES: <span id="losses"></span></p>
+			</div>
+		</div>
+	</div>
+
+	
+	
 </body>
 </html>
