--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h1>CRYSTALS COLLECTOR</h1>
 		<div class="row">
 			<div class="col-lg-12 directions">
-				<p>Click either gem until you get match "magic" number.</p>
+				<p>Click the gems until you get match the "magic" number.</p>
 			</div>
 		</div>
 		<h3>MAGIC NUMBER:</h3>
